# mine-vibe

./: CMakeLists.txt
.claude/skills/build-minecraft/: SKILL.md
.claude/skills/minecraft-agent-mode/: SKILL.md
.claude/skills/publish/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-17-minecraft-foundation.md  2026-03-17-player-modes-physics.md  2026-03-17-worldgen-improvements.md  2026-03-18-agent-control-api.md  2026-03-18-assets.md  2026-03-18-block-physics.md  2026-03-18-loading-screen.md  2026-03-18-multiplayer-backbone.md  2026-03-20-technical-debt-fixes.md  2026-03-21-ui-foundation.md  2026-04-27-hud-inventory-block-edits.md  2026-04-27-lighting-foundation.md
docs/superpowers/specs/: 2026-03-17-minecraft-foundation-design.md  2026-03-17-player-modes-physics-design.md  2026-03-17-worldgen-improvements-design.md  2026-03-18-agent-control-api-design.md  2026-03-18-assets-design.md  2026-03-18-block-physics-design.md  2026-03-18-hud-foundation-design.md  2026-03-18-loading-screen-design.md  2026-03-18-multiplayer-backbone-design.md  2026-03-19-remote-player-extrapolation-design.md  2026-03-21-ui-foundation-design.md  2026-04-27-hud-inventory-block-edits-design.md  2026-04-27-lighting-foundation-design.md  2026-04-27-windows-ci-design.md
shaders/: block.frag  block.vert  hud.frag  hud.vert  player.frag  player.vert  ui.frag  ui.vert
src/: agent.c  agent.h  assets.h  assets_generated.c  block.c  block.h  block_physics.c  block_physics.h  camera.c  camera.h  chunk.c  chunk.h  chunk_map.c  chunk_map.h  chunk_mesh.c  chunk_mesh.h  client.c  client.h  frustum.c  frustum.h  hud.c  hud.h  main.c  mesher.c  mesher.h  net.c  net.h  net_thread.c  net_thread.h  physics.c  physics.h  pipeline.c  pipeline.h  platform_thread.h  player.c  player.h  player_model.c  player_model.h  reliable.c  reliable.h  (+22 more)
src/ui/: font_data.h  hud.c  hud.h  ui.c  ui.h
tests/: renderer_stubs.c  test_agent_json.c  test_client.c  test_hud.c  test_mesher.c  test_net.c  test_remote_player.c  test_ui.c
tools/: embed_shaders.py  gen_assets.py  gen_font_data.py
